--- a/readymade-building.html
+++ b/readymade-building.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to Brigtspot Readymade</title>
+<title>Welcome to Brightspot Readymade</title>
 <style>
     body {
         width: 35em;
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Welcome to Brigtspot Readymade!</h1>
+<h1>Welcome to Brightspot Readymade!</h1>
 <p>Your Brightspot CMS is on it's way. Please hold tight for just a few more moments while your server is setup...
 </p>
 
