--- a/readymade-building.html
+++ b/readymade-building.html
@@ -16,7 +16,7 @@
 </p>
 
 <p>For online documentation and support please refer to
-<a href="http://docs.brightspot.com/">doc.brightspot.com</a>.<br/>
+<a href="http://docs.brightspot.com/">docs.brightspot.com</a>.<br/>
 Commercial support is available at
 <a href="http://www.brightspotcms.com">www.brightspotcms.com</a>.</p>
 
